# CRExecOrders

./: CHANGELOG.md  README.md  pyproject.toml
CRExecOrders/: cr_exec_ord.py  dialog_about.py  dialog_settings.py
